--- a/PatriotVision/Views/Agencies/Index.cshtml
+++ b/PatriotVision/Views/Agencies/Index.cshtml
@@ -1,36 +1,27 @@
 ﻿@model IEnumerable<PatriotVision.Models.Agencies.AgenciesModel>;
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-<div class="container">
-    @foreach (var agency in Model)
-    {
-        
-        <div class="row justify-content-center mb-1">
-            <div class="col-md-6 mx-auto">
-                <div class="card">
-                    <div class="card-body">
-                        @{ 
-                            if(agency.Logo != null)
-                            {
-                                if(agency.Logo.ThumbUrl != null)
-                                {
-                                    <img src="@agency.Logo.ThumbUrl"/>
-                                }
-                            }
-                        } 
-                        <h5 class="card-title"><a href="@agency.AgencyUrl">@agency.Name</a></h5>
-                        <p class="card-text">@agency.Description</p>
 
-                        <a href="@agency.RecentArticlesUrl" class="card-link">Recent Mentions</a>
-                        <a href="@agency.Url" class="card-link">@agency.Url</a>
-                    </div>
-                </div>
+<div class="container no-search">
+    <div class="row justify-content-center mb-1 search-card">
+        <div class="col-md-6 mx-auto search-card-col">
+        @foreach (var agency in Model)
+        {
+            <div class="card card-body">
+                @{
+                    if (agency.Logo != null)
+                    {
+                        if (agency.Logo.ThumbUrl != null)
+                        {
+                            <img class="img-responsive rounded agency-img" src="@agency.Logo.ThumbUrl" />
+                        }
+                    }
+                    <h5 class="card-title mt-1"><a href="@agency.AgencyUrl">@agency.Name</a></h5>
+                    <p class="card-text mt-1">@agency.Name</p>
+                    <p class="mt-1">@agency.Description</p>
+                    <p><a href="/Agencies/Recent?agency_id=@agency.Id" class="card-link">Recent Mentions</a></p>
+                    <p><a href="@agency.Url" class="card-link">@agency.Url</a></p>
+                }
             </div>
+        }
         </div>
-        
-    }
-    
+    </div>
 </div>
